[package]
name = "layer_config_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
trybuild = "1.0.85"

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
